--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,5 @@
 <nav class="navbar  navbar-dark bg-primary fixed-top">
-        <a class="navbar-brand" href="#">MyStore</a>
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Cart</button>
+        <a routerLink="" routerLinkActive="active" class="navbar-brand" href="">MyStore</a>
+        <button class="btn btn-danger" routerLink="/add-product" routerLinkActive="active">Add Product</button>
+        <button class="btn btn-success" type="submit">Cart</button>
 </nav>
