--- a/src/app/contain/contain.component.html
+++ b/src/app/contain/contain.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-4 card " style="width: 18rem;" *ngFor="let item of product" >
-      <app-product-details [item]=item></app-product-details>
+      <app-product-details [item]=item (isDeleted)= 'deleted($event)'></app-product-details>
     </div>
     </div>
 </div>
